--- a/app/src/kaihu/tpl/content.html
+++ b/app/src/kaihu/tpl/content.html
@@ -12,7 +12,10 @@
   </div>
   <div class="right">
     <div class="ads">
-      这里是广告
+      这里是广告 <span>{{name}}</span>
+    </div>
+    <div>
+      <button @click="sayHi">click me</button>
     </div>
   </div>
 </div>
